- Now the [AddToParty command will auto-invite if there's only one result on the player list filter.
- Convoke command now sends a message instead of showing an empty gump, if no users were found to convoke.
- Added alias [Forums to the command [Forum.
- Reward Vendor is now invulnerable, so players won't be able to kill them anymore.
- Fixed message that was telling the skillcap was 700 when you try to train with an npc and you have already reached the skillcap and has no skill set to down.

[*]01/01/2016
Adrian
- Improved Poker Game System.

[*]12/31/2015
Victor
- Now player loses karma when he cuts a human corpse in pieces.
- Now when a player get back his corpse, if it's empty, it's deleted.
- Now players won't need to wait one hour to demolish a house right after placing it.

[*]12/30/2015
Victor
- Added Mail System.
- Added Bomberman Game System.

[*]12/27/2015
Victor
- Disabled house decay. Your house will be there forever.
- Pets/summons AI improved, so they will follow you precisely. Also they won't stay on the same tile anymore.
- Now blue players can perform beneficial actions on non-blues outside Felucca.
- Improved Interior Decorator and lowered its price. You can buy it from the architect.
- Disabled veteran rewards.

[*]12/23/2015
Victor
- Skill cap set to 1200.

[*]12/21/2015
Victor
- Forum gump now opens on login.
- Spears can now be used with one hand.
- Fixed crash when calling guards/peacemakers.
- Criminals can now use the public moongates.
- Killing a vendor now increases the Kills count.

[*]12/20/2015
Victor
- Added earrings and necklaces to loots.
- Allowed Ship placement in Ilshenar and Malas.
- Allowed water pitcher refill from any water source.
- Set NPC Vendors to greet players close-by.
- Improved the [convoke filter system.
- Removed log out delay.
- Lowered Gambling Stone costs.
- Vendors are not invulnerable anymore. But attacking them makes you criminal.
- Improved Peacemakers artificial intelligence.