@@ -25,6 +25,7 @@ Victor
 - Convoke command now sends a message instead of showing an empty gump, if no users were found to convoke.
 - Added alias [Forums to the command [Forum.
 - Reward Vendor is now invulnerable, so players won't be able to kill them anymore.
+- Now Recall and Gate Travel spells can be used by criminal players.
 - Fixed message that was telling the skillcap was 700 when you try to train with an npc and you have already reached the skillcap and has no skill set to down.
 
 [*]01/01/2016
